# rpa-paredes-cano-ventas

./: .gitignore  @AutomationLog.txt  README.md  cc.txt  pyproject.toml
config/: bot_status.json  config.ini  config.ini.example
scripts/: run.bat
src/rpa_paredes_cano_ventas/: __init__.py  __main__.py  types.py
src/rpa_paredes_cano_ventas/apps/: base.py
src/rpa_paredes_cano_ventas/apps/aconsys/: __init__.py  login.py  main_window.py
src/rpa_paredes_cano_ventas/apps/aconsys/modules/: __init__.py  (+2 more)
src/rpa_paredes_cano_ventas/apps/imports/: __init__.py  launcher.py  login.py  main_window.py
src/rpa_paredes_cano_ventas/core/: config.py  logger.py  router.py
src/rpa_paredes_cano_ventas/exceptions/: file_processor.py  series.py  structure_sunat.py
src/rpa_paredes_cano_ventas/interfaces/: base.py
src/rpa_paredes_cano_ventas/models/: header.py  processable.py  registro_maestro.py  validators.py
src/rpa_paredes_cano_ventas/ocr_processor/: __init__.py  core.py  engine.py  helpers.py  image_utils.py  parser.py
src/rpa_paredes_cano_ventas/orchestrator/: aconsys_platform.py  business_rules.py  file_processor.py  import_platform.py
src/rpa_paredes_cano_ventas/processor/: export.py  registro_maestro.py  series.py  validators.py
src/rpa_paredes_cano_ventas/readers/: fastexcel_reader.py  files_to_process.py  input_files.py  read_dir.py  read_input_output.py
src/rpa_paredes_cano_ventas/utils/: controls.py  credentials.py  excel_manager.py  file_explorer.py  pdf_reader.py  state_manager.py
tests/: conftest.py  test_credential.py  test_excel.py  test_process.py
(+4 files in other folders)
