[project]
name = "rpa-paredes-cano-ventas"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "merzamac", email = "100945727+merzamac@users.noreply.github.com"},
]
dependencies = ["xlsxwriter>=3.2.9", "dateparser>=1.3.0", "pydantic>=2.12.5", "pandas>=3.0.1", "fastexcel>=0.19.0", "loguru>=0.7.3", "keyring>=25.7.0", "pyarrow>=23.0.1", "uiautomation>=2.0.29", "psutil>=7.2.2", "python-calamine>=0.6.2"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "\"\""}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
